--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
 
         <h2>Home Page</h2>
 
-        <p></p>
+        <p>hi</p>
+        <p>kdj</p>
 
+        
         <footer>
             <div id="footer"><p>&copy; Copyright 2023 Gomez Productions | <a href="https://github.com/JoseAGomezBravo" target="_blank">Github</a></p></div>
         </footer>
-
     </main>
-
+        
 
 </body>
 
