--- a/services.html
+++ b/services.html
@@ -8,7 +8,10 @@
     
     <title>Services</title>
 
-    <link rel="stylesheet" href="side.css">
+    <link rel="stylesheet" href="main.css">
+
+    <link rel="shortcut icon" href="favicon-2.ico ">
+
 
 </head>
 
@@ -29,12 +32,15 @@
 </aside>
 
 <main>
-    <h1>Home</h1>
+    <h1>Services</h1>
 </main>
-</body>
 
 <footer>
     <p>&copy; Copyright 2023 Gomez Productions | <a href="https://github.com/JoseAGomezBravo" target="_blank">Github</a></p>
 </footer>
+
+</body>
+
+
 
 </html>
