--- a/images.html
+++ b/images.html
@@ -33,6 +33,34 @@
     <main>
         <h1>Images</h1>
 
+        <h2>Image of Service 1</h2>
+
+        <img src="images/IMG_E1030.JPG" alt="Picture showing what is provided in service 1.">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo integer malesuada nunc vel risus commodo viverra. Suspendisse in est ante in nibh mauris. Imperdiet massa tincidunt nunc pulvinar. Et malesuada fames ac turpis egestas maecenas pharetra. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Sit amet cursus sit amet dictum sit. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Eget nulla facilisi etiam dignissim diam. Adipiscing tristique risus nec feugiat in fermentum posuere urna nec.
+
+        </p>
+
+        <h1>Images</h1>
+
+        <h2>Image of Service 2</h2>
+
+        <img src="images/IMG_E1031.JPG" alt="Picture showing what is provided in service 2.">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo integer malesuada nunc vel risus commodo viverra. Suspendisse in est ante in nibh mauris. Imperdiet massa tincidunt nunc pulvinar. Et malesuada fames ac turpis egestas maecenas pharetra. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Sit amet cursus sit amet dictum sit. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Eget nulla facilisi etiam dignissim diam. Adipiscing tristique risus nec feugiat in fermentum posuere urna nec.
+
+        </p>
+
+        <h1>Images</h1>
+
+        <h2>Image of Service 1 and 2</h2>
+
+        <img src="images/IMG_E1032.JPG" alt="Picture showing what is provided when combined with service 1 and 2.">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo integer malesuada nunc vel risus commodo viverra. Suspendisse in est ante in nibh mauris. Imperdiet massa tincidunt nunc pulvinar. Et malesuada fames ac turpis egestas maecenas pharetra. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Sit amet cursus sit amet dictum sit. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Eget nulla facilisi etiam dignissim diam. Adipiscing tristique risus nec feugiat in fermentum posuere urna nec.
+
+        </p>
+
     </main>
 
     <footer>
