--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="images.html">Images</a></li>
                 <li><a href="media.html">Media</a></li>
+                <li><a href="table.html">Pricing</a></li>
             </ul>
         </nav>
         
@@ -35,7 +36,13 @@
 
         <h2>About us</h2>
 
-        <p>hi</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo integer malesuada nunc vel risus commodo viverra. Suspendisse in est ante in nibh mauris. Imperdiet massa tincidunt nunc pulvinar. Et malesuada fames ac turpis egestas maecenas pharetra. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Sit amet cursus sit amet dictum sit. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Eget nulla facilisi etiam dignissim diam. Adipiscing tristique risus nec feugiat in fermentum posuere urna nec.
+
+        </p>
+
+        <p>Nam aliquam sem et tortor. Tellus at urna condimentum mattis pellentesque id nibh tortor id. Purus faucibus ornare suspendisse sed. At tellus at urna condimentum mattis pellentesque. Sapien eget mi proin sed libero enim sed faucibus turpis. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non. Sollicitudin ac orci phasellus egestas. In massa tempor nec feugiat nisl pretium fusce id velit. Eget nullam non nisi est sit amet facilisis magna etiam. Eleifend quam adipiscing vitae proin sagittis nisl. Malesuada bibendum arcu vitae elementum curabitur. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. A erat nam at lectus urna duis convallis convallis. Aliquam malesuada bibendum arcu vitae.
+
+        </p>
 
     </main>
 
