media insterted to page

--- a/media.html
+++ b/media.html
@@ -33,6 +33,18 @@
     <main>
         <h1>Media</h1>
 
+        <video width="380" height="300" controls>
+
+            <source src="media/video (1080p).mp4" type="video/mp4">
+
+            Your Browser does not support the video element.
+
+        </video>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo integer malesuada nunc vel risus commodo viverra. Suspendisse in est ante in nibh mauris. Imperdiet massa tincidunt nunc pulvinar. Et malesuada fames ac turpis egestas maecenas pharetra. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Sit amet cursus sit amet dictum sit. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Eget nulla facilisi etiam dignissim diam. Adipiscing tristique risus nec feugiat in fermentum posuere urna nec.
+
+        </p>
+
     </main>
 
     <footer>
