--- a/table.html
+++ b/table.html
@@ -26,13 +26,56 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="images.html">Images</a></li>
             <li><a href="media.html">Media</a></li>
+            <li><a href="table.html">Pricing</a></li>
         </ul>
     </nav>
     
 </aside>
 
 <main>
-    <h1>Table: Pricing</h1>
+    <h1>Table</h1>
+
+    <h2>Our Prices</h2>
+
+    <div id="table1">
+
+        <table width="100%">
+            <thead>
+                <tr>
+                    <th>Service</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th>Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Service 1</td>
+                    <td>Description 1</td>
+                    <td>$200</td>
+                    <td>3 hours</td>
+                </tr>
+
+                <tr>
+                    <td>Service 2</td>
+                    <td>Description 2</td>
+                    <td>$300</td>
+                    <td>2 hours</td>
+                </tr>
+
+                <tr>
+                    <td>Service 3</td>
+                    <td>Description 3</td>
+                    <td>$600</td>
+                    <td>3 hours</td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
+
+
+
 </main>
 
 <footer>
