--- a/services.html
+++ b/services.html
@@ -26,6 +26,7 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="images.html">Images</a></li>
             <li><a href="media.html">Media</a></li>
+            <li><a href="table.html">Pricing</a></li>
         </ul>
     </nav>
     
