--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="images.html">Images</a></li>
                 <li><a href="media.html">Media</a></li>
-                <li><a href="table.html">Pricing</a></li>
+                <li><a href="table.html">Prices</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="socialmedia.html">Social Media</a></li>
+                <li><a href="forms.html">Forms</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
             </ul>
         </nav>
         
