--- a/reviews.html
+++ b/reviews.html
@@ -39,7 +39,18 @@
 
         <h1>Reviews</h1>
 
-        <h2>About us</h2>
+        <h2>Customer Satisfaction</h2>
+
+        <div class="feature-card">
+            <h3>Customer Review 1</h3>
+            <p>Felis eget velit aliquet sagittis id consectetur purus. Massa tincidunt nunc pulvinar sapien et ligula.</p>
+        </div>
+
+        <div class="feature-card">
+            <h3>Customer Review 2</h3>
+            <p>Felis eget velit aliquet sagittis id consectetur purus. Massa tincidunt nunc pulvinar sapien et ligula.</p>
+        </div>
+
 
 
 
