--- a/socialmedia.html
+++ b/socialmedia.html
@@ -39,7 +39,13 @@
 
         <h1>Home</h1>
 
-        <h2>About us</h2>
+        <h2>Customer Satisfaction</h2>
+
+        <div class="feature-card" id="special-feature">
+
+            
+
+        </div>
 
 
     </main>
