--- a/socialmedia.html
+++ b/socialmedia.html
@@ -45,11 +45,11 @@
 
             <h3>Our Instagram</h3>
 
-            <p><a href="https://www.instagram.com/">@photobothbusiness</a></p>
+            <p><a href="https://www.instagram.com/" target="_blank">@photobothbusiness</a></p>
 
             <h3>Our Facebook</h3>
 
-            <p><a href="https://www.facebook.com/">@Bestphotobooth</a></p>
+            <p><a href="https://www.facebook.com/" target="_blank">@Bestphotobooth</a></p>
 
         </div>
 
