--- a/table.html
+++ b/table.html
@@ -44,7 +44,7 @@
 
     <div id="table1"> 
 
-        <table width="100%">
+        <table>
             <thead>
                 <tr>
                     <th>Service</th>
